5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1709_3033.log
== TEST (2019-05-02 10:37:03) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida")

-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:04) 
-- CODE:
x = float(input("valor de f(x):"))
if(x>0 and x<=100):
	print("entrada valida")
else:
	print"entrada invalida"

-- ERROR:
File "XXXX", line 5
    print"entrada invalida"
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:07) 
-- CODE:
x = float(input("valor de f(x):"))
if(x>0 and x<=100):
	print("entrada valida")
else:
	print"entrada invalida"

-- ERROR:
File "XXXX", line 5
    print"entrada invalida"
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:28) 
-- CODE:
x = float(input("valor de f(x):"))
if(x>0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:39:45) 
-- CODE:
x = float(input("valor de f(x):"))
if(x>0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- EXECUTION TIME:
0.211139
-- ERROR:
  File "/home/codebench/codes/1709/3033/main.py", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:47) 
-- CODE:
x = float(input("valor de f(x):"))
if(x>0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:49) 
-- CODE:
x = float(input("valor de f(x):"))
if(x>0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:51) 
-- CODE:
x = float(input("valor de f(x):"))
if(x>0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:51) 
-- CODE:
x = float(input("valor de f(x):"))
if(x>0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:51) 
-- CODE:
x = float(input("valor de f(x):"))
if(x>0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:40:17) 
-- CODE:
x = float(input("valor de f(x):"))
if(x>=0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:40:35) 
-- CODE:
x = float(input("valor de f(x):"))
if(x>=0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:40:47) 
-- CODE:
x = float(input("valor de f(x):"))
if(x>=0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- EXECUTION TIME:
0.150127
-- ERROR:
  File "/home/codebench/codes/1709/3033/main.py", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:41:07) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:22) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:29) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:29) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:29) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:29) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:29) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:29) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:31) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:31) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:32) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:33) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:35) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:37) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:38) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:39) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:39) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:40) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:41) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:41) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:41) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:42) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:42) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:43) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:44) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:44) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:46) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:47) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:47) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:48) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:50) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:53) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:53) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:56) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:57) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:57) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:45:17) 
-- CODE:
x = float(input("valor de f(x):"))
if(x<0 and x<=100):
	print("entrada valida")
else:
	print("entrada invalida)"

-- EXECUTION TIME:
0.236492
-- ERROR:
  File "/home/codebench/codes/1709/3033/main.py", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
